--- a/unibot_project/custom_admin/templates/custom_admin/base.html
+++ b/unibot_project/custom_admin/templates/custom_admin/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}UniBot Console{% endblock %}</title>
 
     <!-- ستايل لوحة التحكم المخصص -->
-    <link rel="stylesheet" href="{% static 'custom_admin/css/admin.css' %}?v=5">
+  <link rel="stylesheet" href="{% static 'custom_admin/css/admin.css' %}?v=2025-11-09-03">
 
     <!-- (اختياري) خط Cairo -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
